# uni

./: .clang-format  .gitignore  LICENCE.md  README.md
ai/ps1/: CMakeLists.txt  debug.hpp  heap.hpp  heuristic.cpp  heuristic.hpp  main.cpp  solver.cpp  solver.hpp  types.hpp
ai/ps2/: .gitignore  CMakeLists.txt  README.md  board.h  bot.cpp  bot.hpp  client.cpp  client.hpp  configuration.hpp  heuristic.cpp  heuristic.hpp  main.cpp  server.c  types.hpp
ai/ps3/: e3.py  handwriting.py  train_model.py
aisd/lab/L1/: L1E1.cpp  L1E2.cpp  L1E3.cpp
aisd/lab/L2/: CMakeLists.txt  lingen.cpp  randgen.cpp  rlingen.cpp  sort.cpp
aisd/lab/L3/: CMakeLists.txt  binsearch.cpp  plot2.py  plot3.py  plot4.py  plot5.py  plot5_worst.py  qsortgen.cpp  searcharg.cpp  select.cpp  sortselect.cpp
aisd/lab/L3/o/: binsearch.sh  run.sh
aisd/lab/L4/: CMakeLists.txt  bst.cpp  plot2.py  plot4.py  plot6.py  randgen.cpp  rbt.cpp  splay.cpp
aisd/lab/L5/: CMakeLists.txt  heap.cpp  heap.sh  lcs.cpp  lcs.sh  lingen.cpp  plot1.py  plot2.py  plot4.py  rlingen.cpp  seqgen.cpp  sort.cpp  sort.sh
aod/ps1/: common.hpp  compile.sh  e1.cpp  e2.cpp  e3.cpp  e4.cpp  run4.sh
aod/ps2/: e1.data  e1.gmp  e1.out  e2.data  e2.gmp  e2.out  e3.data  e3.gmp  e3.out  e4.data  e4.gmp  e4.out  e5.data  e5.gmp  e5.out  report.md
aod/ps3/: .gitignore  CMakeLists.txt  dial.cpp  dijkstra.cpp  graph.hpp  main.cpp  plot.py  radix.cpp  report.md  utility.hpp
aod/ps4/: .gitignore  CMakeLists.txt  edmondskarp.cpp  edmondskarp.hpp  ex1_main.cpp  ex2_main.cpp  graph.hpp  options.cpp  options.hpp  plot.py  report.md  types.hpp  utility.hpp
fizyka/: Pytania_Problemy S_1.docm  Untitled 1.odf  esej.odt  esej.pdf~RF45a3176a.TMP
japanese/: Homework_1.txt  Homework_2.txt  Homework_5.txt  homework_10.txt  homework_11.txt  homework_12.txt  homework_13.txt  homework_14.txt  homework_15.txt  homework_16.txt  homework_17.txt  homework_18.txt  homework_19.txt  homework_20.txt  homework_21.txt  homework_22.txt  homework_23.txt  homework_24.txt  homework_25.txt  homework_3.txt  homework_4.txt  homework_6.txt  homework_7.txt  homework_8.txt  homework_9.txt
jftt/pdf1/: solution.tex
jftt/pdf2/: solution.tex
jftt/ps1/: .gitignore  CMakeLists.txt  matcher.cpp
jftt/ps2/: .gitignore  compile4.sh  ex1.flex  ex2.flex  ex3.flex  ex4.cpp  ex4.flex
jftt/ps3/: calc  calc.cpp  calc.h  calc.l  calc.py  calc.tab.c  calc.tab.h  calc.y  compile  lex.yy.c
jftt/ps4/: .gitignore  CMakeLists.txt
jftt/ps4/compiler/: glangc.cpp
jftt/ps4/compiler/glang_ast/: ast.hpp  syntax_lowering.cpp  syntax_lowering.hpp
jftt/ps4/compiler/glang_codegen_vm/: context.cpp  context.hpp  ir_lowering.cpp  ir_lowering.hpp  lir.cpp  lir.hpp  pass_assign_addresses.cpp  passes.hpp  prettyprint.cpp  prettyprint.hpp
jftt/ps4/compiler/glang_core/: either.hpp  ilist.hpp  iterators.hpp  memory.hpp  scoped_map.hpp  source_info.hpp  types.hpp
jftt/ps4/compiler/glang_diagnostics/: error.cpp  error.hpp  utilities.cpp  utilities.hpp
jftt/ps4/compiler/glang_frontend/: fe_context.hpp
jftt/ps4/compiler/glang_ir/: ast_lowering.cpp  ast_lowering.hpp  context.hpp  ir.cpp  ir.hpp  lower_regs_to_mem.cpp  opcodes.cpp  opcodes.hpp  opt_coalesce_loads.cpp  pass_canonicalise_brcond.cpp  passes.hpp  prettyprint.cpp  prettyprint.hpp
jftt/ps4/compiler/glang_lexer/: diagnostics.cpp  diagnostics.hpp  lexer.cpp  lexer.hpp  prettyprint.cpp
jftt/ps4/compiler/glang_sema/: diagnostics.cpp  diagnostics.hpp  sema.cpp  sema.hpp
jftt/ps4/compiler/glang_syntax/: parser.cpp  parser.hpp  prettyprint.cpp  prettyprint.hpp  syntax.cpp  syntax.hpp  syntax_accessors.cpp  syntax_accessors.hpp
jftt/ps4/tests/: call.imp  call_div.imp  div.imp  eq.imp  geq.imp  gt.imp  leq.imp  lt.imp  mul.imp  neq.imp  rem.imp
jftt/ps4/tools/generators/: generate_accessors.py  syntax_definitions.py
kkd/ps1/: .gitignore  CMakeLists.txt  main.cpp
kkd/ps2/: .gitignore  AAC.cpp  AAC.hpp  CMakeLists.txt  bitio.hpp  decoder.cpp  encoder.cpp  types.hpp
kkd/ps3/: .gitignore  CMakeLists.txt  LZW.cpp  LZW.hpp  bitio.hpp  decoder.cpp  encoder.cpp  types.hpp  universal.cpp  universal.hpp
kkd/ps4/: CMakeLists.txt  main.cpp  tga.cpp  types.hpp
kkd/ps5/: CMakeLists.txt  main.cpp  tga.cpp  tga.hpp  types.hpp
kkd/ps6/: CMakeLists.txt  decoder.cpp  encoder.cpp  types.hpp
kkd/ps7/: CMakeLists.txt  decoder.cpp  encoder.cpp  noise.cpp  verifier.cpp
metaheuristic/ps1/: .gitignore  CMakeLists.txt  graph.cpp  graph.hpp  loader.cpp  loader.hpp  main_mst.cpp  main_random.cpp  main_tsp.cpp  mst.cpp  mst.hpp  mst_to_tsp.cpp  mst_to_tsp.hpp  plot.py  report.tex  types.hpp
mobile/: .gitignore  README.md
mobile/Calendar/app/: build.gradle
mobile/Calendar/app/src/main/: AndroidManifest.xml
mobile/Calendar/gradle/wrapper/: gradle-wrapper.properties
mobile/Gallery/app/: build.gradle
mobile/Gallery/app/src/main/: AndroidManifest.xml
mobile/Gallery/gradle/wrapper/: gradle-wrapper.properties
mobile/Hangman/app/: build.gradle
mobile/Hangman/gradle/wrapper/: gradle-wrapper.properties
mobile/Minesweeper/: local.properties
mobile/Minesweeper/app/: build.gradle
mobile/Minesweeper/gradle/wrapper/: gradle-wrapper.properties
on/: .gitignore
on/ps1/: ex1.jl  ex2.jl  ex3.jl  ex4.jl  ex5.jl  ex6.jl  ex7.jl  report.tex
on/ps2/: .gitignore  ex1.jl  ex3.jl  ex4.jl  ex5.jl  ex6.jl  report.tex
on/ps3/: .gitignore  ex4.jl  ex5.jl  ex6.jl  report.tex  solver.jl  tests.jl
on/ps4/: ex5.jl  ex6.jl  newton_polynomial.jl  report.tex  tests.jl
on/ps5/: calculate_b.jl  calculate_bx.jl  calculate_x.jl  io.jl  matrix.jl  plot.py  report.tex  test.jl  vector.jl
ts/ps1/: report.md  traceping
ts/ps2/: main.py  report.md
ts/ps3/: .gitignore  CMakeLists.txt  crc.cpp  crc.hpp  csma.cpp  frame.cpp  frame.hpp  main.cpp  types.hpp  utility.hpp
ts/ps5/: server.pl  server0.pl
ts/ps5/webpage/: index.html  subpage1.html  subpage2.html
www/ps4/: create_note.sh  list_notes.sh  login.sh  main.js  package-lock.json  package.json  populate.sh  register.sh  view_note.sh
www/ps5/: index.html
(+62 files in other folders)
