cmake_minimum_required(VERSION 3.12)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/o")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/o")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/o")

project(L3 CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(binsearch "binsearch.cpp")
add_executable(select "select.cpp")
target_compile_definitions(select PRIVATE STD_SELECT=1)
add_executable(randselect "select.cpp")
target_compile_definitions(randselect PRIVATE RAND_SELECT=1)
add_executable(qsort "sortselect.cpp")
target_compile_definitions(qsort PRIVATE QSORT=1)
add_executable(dpqsort "sortselect.cpp")
target_compile_definitions(dpqsort PRIVATE DPQSORT=1)
add_executable(lingen "lingen.cpp")
add_executable(rlingen "rlingen.cpp")
add_executable(randgen "randgen.cpp")
add_executable(qsortgen "qsortgen.cpp")
add_executable(searcharg "searcharg.cpp")
